<resources>
    <string name="app_name">NoiseMap</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Around you</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="running_enabled">Share your measurements</string>
    <string name="title_interval">Frequency of sampling</string>
    <string name="power_saving">Enable power saving</string>
    <string name="button_text">GET NOISE NOW!</string>
    <string name="text_title">Last measurement</string>
    <string name="desc">Activity</string>
</resources>
